Move mdx to pages router (from app router) and render project metadata

--- a/data/projectsMarkdowns/car-evolution-v1.mdx
+++ b/data/projectsMarkdowns/car-evolution-v1.mdx
@@ -1,3 +1,15 @@
+---
+title: "Car Evolution v1"
+link: "/projects/car-evolution-v1"
+image: "/projects/car-evolution-v1/thumbnail.png"
+desc: "Genetic algorithm that evolves cars to drive around a track."
+date: {
+    year: 2016,
+    month: 8,
+    string: "August 2016"
+}
+builtWith: "Python + pygame"
+---
 
 <p>
     A program where cars with tiny brains evolve/learn to drive around a non-linear track.
